--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,15 @@ body{
     font-family: 'poppins', sans-serif;
 }
 
-.cabecalho > img{
+header > img{
     width: 50px;
 }
 
-.cabecalho{
+header{
     display: flex;
     gap: 50px;
     flex-flow: row wrap;
-    padding: 10px;
+    padding: 5px;
     align-items: center;
 }
 
@@ -31,17 +31,69 @@ body{
 }
 
 
-.menu > button{
+.menu > button, .cart-icon > button{
     background-color: transparent;
     border: none;
     font-size: 15px;
 }
 
-.menu > button > i{
+.cart-icon > button > i{
     font-size: 20px;
 }
 
-.apresentacao{
+.cart-icon{
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: cadetblue;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    gap: 5px;
+}
+
+button, li {
+    cursor: pointer;
+}
+.modals{
+    display: flex;
+    gap: 10px;
+}
+
+.cart{
+    display: block;
+    box-shadow: 6px 7px 15px rgba(0, 0, 0, 0.423);
+        text-align: center;
+        
+        
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .cart::-webkit-scrollbar{
+        width: 1px;
+    }
+
+
+    .cart-product{
+        display: flex;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .product-cart-name{
+        width: 130px;
+    }
+
+    .product-cart-qtd{
+        border-radius: 5px;
+        border: none;
+    }
+
+   
+
+
+.presentation{
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -51,13 +103,16 @@ body{
     
 }
 
-.apresentacao > p{
+.presentation > p{
     width: 60vw;
 }
 
 .container{
    flex-flow: row wrap;
 }
+
+
+
 section{
     padding: 30px;
 }
@@ -74,45 +129,73 @@ section > h3{
     font-size: 15px;
 }
 
-.eletronicos, .jogos{
+.eletronics, .games{
     display: flex;
     flex-flow: row wrap;
     gap: 20px;
-
-}
-
-.eletronicos, .jogos{
-    display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.eletronicos > div > img{
-    width: 50%;
+.product > div > img{
+    width: 60%;
 }
 
-.eletronicos > div, .jogos > div{
+.product > div{
     display: flex;
-    align-items: center;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    height: 70%;
     text-align: center;
-    flex-basis: 200px;
-    
-    /* background-color: rgba(0, 128, 0, 0.607);   */
-    transition: all .2s;
+    gap: 5px;
 }
 
-.eletronicos > div:hover, .jogos > div:hover{
+.product{
+    display: flex;
+    width: 200px;
+    gap: 20px;
+    height: 300px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    transition: all .2s;
+    border-radius: 20px;
+}
+.product:hover{
 box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
 }
 
-
-
-
-.rodape{
-    background-color: blueviolet;
+.product > button{
+    padding: 5px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 7px 5px;
+    transition: all .2s;
 }
+
+.product > button:hover{
+    color: black;
+    background-color: wheat;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.556);
+}
+
+.cart-product{
+    display: flex;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.cart-product > img{
+    width: 80px;
+}
+
+.product-cart-qtd{
+    width: 35px;
+    height: 35px;
+}
+
 
 @media (max-width: 500px){
     .eletronicos > h3{
@@ -125,3 +208,4 @@ box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
         height: 200px;
     }
 }
+
