--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
 }
 
-body{
+body {
+    
     font-family: 'poppins', sans-serif;
+    
 }
 
-header > img{
+header>img {
     width: 50px;
 }
 
-header{
+header {
     display: flex;
     gap: 50px;
     flex-flow: row wrap;
@@ -24,24 +25,25 @@ header{
     align-items: center;
 }
 
-.menu{
+.menu {
     display: flex;
     gap: 20px;
     flex-flow: row wrap;
 }
 
 
-.menu > button, .cart-icon > button{
+.menu>button,
+.cart-icon>button {
     background-color: transparent;
     border: none;
     font-size: 15px;
 }
 
-.cart-icon > button > i{
+.cart-icon>button>i {
     font-size: 20px;
 }
 
-.cart-icon{
+.cart-icon {
     color: white;
     padding: 5px;
     border-radius: 10px;
@@ -52,48 +54,94 @@ header{
     gap: 5px;
 }
 
-button, li {
+.products {
+    background-color: red;
+}
+
+button,
+li {
     cursor: pointer;
 }
-.modals{
-    display: flex;
-    gap: 10px;
+
+.modals {
+    position: relative;
 }
 
-.cart{
-    display: block;
+
+
+.cart {
+    background-color: aliceblue;
+    overflow: hidden;
+    width: 0%;
+    justify-content: space-between;
+    position: absolute;
+    height: calc(100vh - 60px);
     box-shadow: 6px 7px 15px rgba(0, 0, 0, 0.423);
-        text-align: center;
-        
-        
-        flex-direction: column;
-        overflow: scroll;
-    }
+    flex-direction: column;
+    transition: all .3s;
+}
 
-    .cart::-webkit-scrollbar{
-        width: 1px;
-    }
+.show-modal{
+    width: 400px;
+    display: flex;
+}
 
-
-    .cart-product{
-        display: flex;
-        gap: 20px;
-        align-items: center;
-    }
-
-    .product-cart-name{
-        width: 130px;
-    }
-
-    .product-cart-qtd{
-        border-radius: 5px;
-        border: none;
-    }
-
-   
+.cart-product::-webkit-scrollbar {
+    width: 1px;
+}
 
 
-.presentation{
+.cart-product {
+    
+    gap: 10px;
+    display: flex;
+    overflow: scroll;
+    flex-direction: column;
+}
+
+.cart-product div {
+    height: 70px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+.cart-product div>img {
+    width: 60px;
+}
+
+.product-cart-name {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 140px;
+    
+}
+
+.product-cart-qtd {
+    border-radius: 5px;
+    border: none;
+}
+
+div.total{
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: space-between;
+}
+
+
+button.finalizar{
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: none;
+    margin: 10px auto;
+}
+
+
+
+.presentation {
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -101,23 +149,26 @@ button, li {
     align-items: center;
     justify-content: center;
     
+
 }
 
-.presentation > p{
+.presentation>p {
     width: 60vw;
 }
 
-.container{
-   flex-flow: row wrap;
+.container {
+    flex-flow: row wrap;
+   
+   
 }
 
 
 
-section{
+section {
     padding: 30px;
 }
 
-section > h3{
+section>h3 {
     margin-bottom: 30px;
     background-color: black;
     color: white;
@@ -129,7 +180,8 @@ section > h3{
     font-size: 15px;
 }
 
-.eletronics, .games{
+.eletronics,
+.games {
     display: flex;
     flex-flow: row wrap;
     gap: 20px;
@@ -137,11 +189,11 @@ section > h3{
     justify-content: center;
 }
 
-.product > div > img{
+.product>div>img {
     width: 60%;
 }
 
-.product > div{
+.product>div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -151,7 +203,7 @@ section > h3{
     gap: 5px;
 }
 
-.product{
+.product {
     display: flex;
     width: 200px;
     gap: 20px;
@@ -162,11 +214,12 @@ section > h3{
     transition: all .2s;
     border-radius: 20px;
 }
-.product:hover{
-box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
+
+.product:hover {
+    box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
 }
 
-.product > button{
+.product>button {
     padding: 5px;
     background-color: black;
     color: white;
@@ -175,37 +228,37 @@ box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
     transition: all .2s;
 }
 
-.product > button:hover{
+.product>button:hover {
     color: black;
     background-color: wheat;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.556);
 }
 
-.cart-product{
+.cart-product {
     display: flex;
     text-align: center;
     margin-bottom: 5px;
 }
 
-.cart-product > img{
+.cart-product>img {
     width: 80px;
 }
 
-.product-cart-qtd{
+.product-cart-qtd {
     width: 35px;
     height: 35px;
 }
 
 
-@media (max-width: 500px){
-    .eletronicos > h3{
+@media (max-width: 500px) {
+    .eletronicos>h3 {
         width: 50vw;
     }
 
-    .eletronicos > div, .jogos > div{
+    .eletronicos>div,
+    .jogos>div {
         margin: auto;
         flex-basis: 150px;
         height: 200px;
     }
 }
-
