--- a/css/style.css
+++ b/css/style.css
@@ -5,269 +5,171 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    box-sizing: border-box;
 }
 
 body {
-    
     font-family: 'poppins', sans-serif;
-    
 }
 
-header>img {
-    width: 50px;
+header > img {
+    width: 60px;
+} 
+
+header, .menu, .container, section > div, .items, .cart{
+    display: flex;
 }
 
 header {
-    display: flex;
     gap: 50px;
-    flex-flow: row wrap;
-    padding: 5px;
+    max-height: 60px;
+   background-color: transparent;
+   position: absolute;
+}
+
+.menu{
     align-items: center;
+    gap: 30px;
 }
 
-.menu {
-    display: flex;
-    gap: 20px;
-    flex-flow: row wrap;
+.menu > button{
+    padding: 6px 15px;
+    border-radius: 20px;
+    border: none;
 }
 
-
-.menu>button,
-.cart-icon>button {
+.cart-icon > button{
     background-color: transparent;
     border: none;
-    font-size: 15px;
+} 
+
+
+.container{
+    height: 100vh;
+    color: #15046c;
+    text-align: center;
+    width: 100vw;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 50px;
 }
 
-.cart-icon>button>i {
+.container > div:nth-child(1){
+    width: 300px;
+    margin: auto;
+}
+
+.container div:nth-child(2) > img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.container > div:nth-child(2){
+    width: 50%;
+    height: 100%;
+    border-radius: 500px 0px 0px 50px;
+    overflow: hidden;
+}
+
+.cart{
+    position: absolute;
+}
+
+
+
+section > h3{
+    background-color: #15046c;
+    width: 30%;
+    text-indent: 20px;
+    color: white;
+    border-radius: 0px 10px 10px 0px;
+    font-weight: normal;
     font-size: 20px;
 }
 
-.cart-icon {
-    color: white;
-    padding: 5px;
-    border-radius: 10px;
-    background-color: rgba(95, 158, 160, 0.327);
-    display: flex;
+section > div{
+    padding: 40px 20px 60px 20px;
+    flex-flow: row wrap;
     align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.items{
+    padding: 20px;
     text-align: center;
-    gap: 5px;
+    height: 350px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-basis: 250px;
 }
 
-.products {
-    background-color: red;
+.items img{
+    width: 150px;
 }
 
-button,
-li {
-    cursor: pointer;
+.items > button {
+    width: 90%;
+    padding: 5px 0px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    background-color: #15046c;
+}
+
+.cart{
+    position: absolute;
+    width: 0%;
+    overflow: hidden;
+    background-color: white;
+    height: calc(100vh - 61px);
+    top: 60px;
+    transition: width 0.2s;
+}
+
+.show-cart{ 
+    width: 50%;
 }
 
 .cart {
-    background-color: white;
-    overflow: hidden;
-    width: 0%;
     justify-content: space-between;
-    position: absolute;
-    height: calc(100vh - 60px);
-    box-shadow: 4px 7px 30px rgba(0, 0, 0, 0.101);
     flex-direction: column;
-    transition: all .3s;
-}
-
-.show-modal{
-    width: 450px;
-    display: flex;
-}
-
-.container-product::-webkit-scrollbar {
-    width: 0px;
-}
-
-
-.container-product {
-    padding: 10px;
-    gap: 10px;
-    display: flex;
-    overflow: scroll;
-    flex-direction: column;
-}
-
-.container-product div {
-    height: 70px;
-    display: flex;
-    gap: 25px;
     align-items: center;
+    overflow: scroll;
 }
 
-.container-product div>img {
-    width: 60px;
+.cart-product{
+    display: flex;
+    gap: 10px;
 }
 
-.container-product div>button > img{
-    width: 20px;
+.cart-product > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
 }
 
-.container-product div>button{
-    border: none;
-    padding: 3px 5px;
-    border-radius: 3px;
+.btn-qtd{
+    display: flex;
+    gap: 10px;
 }
 
-.product-cart-name {
-    flex-grow: 0;
-    flex-shrink: 0;
-    width: 140px;
-    
-}
-
-.product-cart-qtd {
+.btn-qtd button{
     border-radius: 5px;
     border: none;
+    width: 40px;
+    height: 20px;
+    font-weight: bold;
 }
 
 
 
-div.total{
-    border: 1px solid black;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 0px 0px 25px;
-    display: flex;
-    width: 100%;
-    border-radius: 15px 15px 0px 0px;
-}
-
-
-button.finalizar{
-    background-color: black;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 10px;
-    border: none;
-    margin: 15px auto;
-}
 
 
 
-.presentation {
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    
-
-}
-
-.presentation>p {
-    width: 60vw;
-}
-
-.container {
-    flex-flow: row wrap;
-   
-   
-}
 
 
-
-section {
-    padding: 30px;
-}
-
-section>h3 {
-    margin-bottom: 30px;
-    background-color: black;
-    color: white;
-    padding: 5px;
-    font-weight: 200;
-    width: 30vw;
-    text-indent: 10px;
-    border-radius: 0px 5px 5px 0px;
-    font-size: 15px;
-}
-
-.eletronics,
-.games {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.product>div>img {
-    width: 60%;
-}
-
-.product>div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 70%;
-    text-align: center;
-    gap: 5px;
-}
-
-.product {
-    display: flex;
-    width: 200px;
-    gap: 20px;
-    height: 300px;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-evenly;
-    transition: all .2s;
-    border-radius: 20px;
-}
-
-.product:hover {
-    box-shadow: -4px 2px 42px -7px rgba(0, 128, 0, 0.381);
-}
-
-.product>button {
-    padding: 5px;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 7px 5px;
-    transition: all .2s;
-}
-
-.product>button:hover {
-    color: black;
-    background-color: wheat;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.556);
-}
-
-.cart-product {
-    display: flex;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-.cart-product>img {
-    width: 80px;
-}
-
-.product-cart-qtd {
-    width: 35px;
-    height: 35px;
-}
-
-
-@media (max-width: 500px) {
-    .eletronicos>h3 {
-        width: 50vw;
-    }
-
-    .eletronicos>div,
-    .jogos>div {
-        margin: auto;
-        flex-basis: 150px;
-        height: 200px;
-    }
-}
