--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 body {
@@ -73,12 +74,6 @@ header {
     overflow: hidden;
 }
 
-.cart{
-    position: absolute;
-}
-
-
-
 section > h3{
     background-color: #15046c;
     width: 30%;
@@ -128,22 +123,37 @@ section > div{
     height: calc(100vh - 61px);
     top: 60px;
     transition: width 0.2s;
-}
-
-.show-cart{ 
-    width: 50%;
-}
-
-.cart {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
     overflow: scroll;
+    box-shadow: 5px -2px 10px #15046c2a;
+}
+
+.cart > .total > button{
+    background-color: #15046c;
+    padding: 5px 50px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+}
+
+.cart > .total{
+    display: flex;
+    gap: 100px;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.show-cart{ 
+    width: 550px;
 }
 
 .cart-product{
     display: flex;
     gap: 10px;
+    margin-bottom: 30px;
 }
 
 .cart-product > div{
@@ -152,6 +162,12 @@ section > div{
     justify-content: center;
     gap: 10px;
 }
+
+.cart-product > img{
+    width: 120px;
+}
+
+
 
 .btn-qtd{
     display: flex;
@@ -164,6 +180,12 @@ section > div{
     width: 40px;
     height: 20px;
     font-weight: bold;
+}
+
+@media (max-width: 750px) {
+    .show-cart{
+        width: 100%;
+    }
 }
 
 
