atualização de estilos

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,9 @@ header {
     gap: 50px;
     max-height: 60px;
    background-color: transparent;
-   position: absolute;
+   position: fixed;
+    width: 100%;
+    background-color: white;
 }
 
 .menu{
@@ -34,22 +36,20 @@ header {
 }
 
 .menu > button{
-    padding: 6px 15px;
-    border-radius: 20px;
+   background-color: transparent;
     border: none;
 }
 
 .cart-icon > button{
     background-color: transparent;
     border: none;
-} 
-
+}
 
 .container{
     height: 100vh;
     color: #15046c;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     gap: 30px;
@@ -72,6 +72,7 @@ header {
     height: 100%;
     border-radius: 500px 0px 0px 50px;
     overflow: hidden;
+    box-shadow:4px 6px 10px #15046ca2;
 }
 
 section > h3{
@@ -116,11 +117,11 @@ section > div{
 }
 
 .cart{
-    position: absolute;
+    position: fixed;
     width: 0%;
     overflow: hidden;
     background-color: white;
-    height: calc(100vh - 61px);
+    height: calc(100vh - 80px);
     top: 60px;
     transition: width 0.2s;
     justify-content: space-between;
@@ -144,10 +145,6 @@ section > div{
     align-items: center;
     margin-bottom: 30px;
     margin-top: 20px;
-}
-
-.show-cart{ 
-    width: 550px;
 }
 
 .cart-product{
@@ -183,8 +180,23 @@ section > div{
 }
 
 @media (max-width: 750px) {
-    .show-cart{
-        width: 100%;
+    .container > div:nth-child(2){
+        display: none;
+    }
+
+    
+}
+
+@media (max-width: 950px) {
+    .container > div:nth-child(2){
+        width: 35%;
+       
+    }
+}
+
+@media (min-width: 960px){
+    .items > button:hover {
+        box-shadow: 4px 5px 8px rgba(0, 0, 0, 0.385); 
     }
 }
 
