--- a/css/style.css
+++ b/css/style.css
@@ -49,30 +49,17 @@ header {
     height: 100vh;
     color: #15046c;
     text-align: center;
-    width: 100%;
     justify-content: space-between;
     align-items: center;
-    gap: 30px;
-    margin-bottom: 50px;
 }
 
-.container > div:nth-child(1){
+.container > div{
     width: 300px;
     margin: auto;
 }
 
-.container div:nth-child(2) > img{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-.container > div:nth-child(2){
-    width: 50%;
-    height: 100%;
-    border-radius: 500px 0px 0px 50px;
-    overflow: hidden;
-    box-shadow:4px 6px 10px #15046ca2;
+.container > img{
+    width: 40%;
 }
 
 section > h3{
@@ -86,49 +73,45 @@ section > h3{
 }
 
 section > div{
-    padding: 40px 20px 60px 20px;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
+    gap: 20px;
+    overflow-x: auto;
+}
+
+section > div::-webkit-scrollbar{
+    scroll-padding: 0px;
 }
 
 .items{
     padding: 20px;
+    
     text-align: center;
-    height: 350px;
-    align-items: center;
+    height: 300px;
+    /* background-color: #15046c; */
     flex-direction: column;
-    justify-content: space-between;
-    flex-basis: 250px;
 }
 
-.items img{
+.items > img{
     width: 150px;
+    height: 200px;
+    object-fit: contain;
 }
 
-.items > button {
-    width: 90%;
-    padding: 5px 0px;
-    border-radius: 20px;
-    border: none;
-    color: white;
-    background-color: #15046c;
-}
 
 .cart{
     position: fixed;
     width: 0%;
-    overflow: hidden;
     background-color: white;
-    height: calc(100vh - 80px);
-    top: 60px;
+    height: 100vh;
+    top: 0;
     transition: width 0.2s;
     justify-content: space-between;
     flex-direction: column;
-    align-items: center;
     overflow: scroll;
     box-shadow: 5px -2px 10px #15046c2a;
+}
+
+.cart::-webkit-scrollbar{
+    scroll-padding: 0px;
 }
 
 .cart > .total > button{
@@ -140,11 +123,9 @@ section > div{
 }
 
 .cart > .total{
+    margin: 0 auto;
     display: flex;
-    gap: 100px;
-    align-items: center;
-    margin-bottom: 30px;
-    margin-top: 20px;
+    gap: 60px;
 }
 
 .cart-product{
@@ -177,6 +158,19 @@ section > div{
     width: 40px;
     height: 20px;
     font-weight: bold;
+}
+
+.modal{
+    display: none;
+    border-radius: 10px;
+    width: 45%;
+  height: 70%;
+  background-color: red;
+  /* Centralizar na vertical e na horizontal */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (max-width: 750px) {
