--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    font-family: 'rubik', sans-serif;
+    font-weight: 600;
 }
+
+#345ba0
 
 body {
     font-family: 'poppins', sans-serif;
 }
 
 header > img {
-    width: 60px;
+    width: 90px;
 } 
 
-header, .menu, .container, section > div, .items, .cart{
+header, .menu, section > div, .items, .cart{
     display: flex;
 }
 
@@ -47,54 +54,101 @@ header {
 
 .container{
     height: 100vh;
-    color: #15046c;
-    text-align: center;
-    justify-content: space-between;
-    align-items: center;
+    background-image: url(../img/background-img.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom right;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: justify;
+    margin-bottom: 50px;
+    
 }
 
-.container > div{
-    width: 300px;
-    margin: auto;
+.container > p{
+    width: 400px;
+    font-weight: 500;
+    margin-bottom: 20px;
 }
 
 .container > img{
-    width: 40%;
+    width: 200px;
 }
 
-section > h3{
-    background-color: #15046c;
-    width: 30%;
-    text-indent: 20px;
-    color: white;
-    border-radius: 0px 10px 10px 0px;
-    font-weight: normal;
-    font-size: 20px;
+.container > button{
+    color: #15046c;
+    width: 250px;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+}
+
+.container > h1{
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+    font-size: 80px;
+}
+
+
+
+
+.container * {
+    margin-left: 50px;
+}
+
+section > h2{
+    
+    text-indent: 50px;
+   
+}
+
+section{
+    overflow: scroll;
 }
 
 section > div{
-    gap: 20px;
-    overflow-x: auto;
+    gap: 30px;
+
+   
+    margin-left: 20px;
 }
 
-section > div::-webkit-scrollbar{
+section::-webkit-scrollbar{
     scroll-padding: 0px;
 }
 
-.items{
-    padding: 20px;
+.item{
+
+    position: relative;
     
-    text-align: center;
-    height: 300px;
-    /* background-color: #15046c; */
-    flex-direction: column;
 }
 
-.items > img{
-    width: 150px;
-    height: 200px;
-    object-fit: contain;
+.item > img{
+   height: 150px;
+   width: 120px;
+   object-fit: contain;
 }
+
+.item > button{
+    padding: 2px 30%;
+    position: absolute;
+    top: 82%;
+    transition: all 0.2s;
+    left: 20%;
+    opacity: 0;
+}
+
+.item:hover button{
+  opacity: 1;
+    left: 20%;
+    top: 80%;   
+    
+}
+
+
 
 
 .cart{
@@ -178,7 +232,17 @@ section > div::-webkit-scrollbar{
         display: none;
     }
 
-    
+    .container > h1{
+        font-size: 50px;
+    }
+
+    .container *{
+        margin-left: 20px;
+    }
+
+    .container > p{
+        width: 350px;
+    }
 }
 
 @media (max-width: 950px) {
