--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ header {
 
 .container{
     height: 100vh;
-    background-image: url(../img/background-img.svg);
+    background-image: url(../img/background-img\(1\).svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom right;
@@ -227,6 +227,104 @@ section::-webkit-scrollbar{
   transform: translate(-50%, -50%);
 }
 
+.slider{
+   width: 800px;
+   height: 400px;
+   overflow: hidden;
+}
+
+.slides{
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slides > input{
+    display: none;
+}
+
+.slide{
+    width: 25%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1.5s;
+}
+
+.slide img{
+    width: 750px;
+   
+}
+
+.manual-navigation{
+    position: absolute;
+    width: 800px;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
+}
+
+.manual-btn{
+    border: 2px solid #fff;
+    padding: 5px;
+    border-radius: 10px;
+    margin: 0 2px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.manual-btn:hover{
+    background: #fff;
+}
+
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -25%;
+}
+
+.navigation div{
+    border: 2px solid #15046c;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s;
+    margin: 0 2px;
+}
+
+.navigation{
+    position: absolute;
+    width: 800px;
+    display: flex;
+    justify-content: center;
+   margin-top: 360px;   
+
+}
+.banners{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.banners > img{
+    width: 25%;
+}
+
+#radio1:checked ~ .navigation .btn1{
+    background-color: #15046c;
+    
+}
+
+#radio2:checked ~ .navigation .btn2{
+    background-color: #15046c;
+    
+}
+
+
+
 @media (max-width: 750px) {
     .container > div:nth-child(2){
         display: none;
@@ -243,12 +341,31 @@ section::-webkit-scrollbar{
     .container > p{
         width: 350px;
     }
+
+
+    .slider{
+        width: 100%;
+
+    }
+
+    .slide img{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
 }
 
 @media (max-width: 950px) {
     .container > div:nth-child(2){
         width: 35%;
-       
+    }
+
+    .banners > img{
+        width: 400px;
+        display: none;
     }
 }
 
@@ -256,6 +373,8 @@ section::-webkit-scrollbar{
     .items > button:hover {
         box-shadow: 4px 5px 8px rgba(0, 0, 0, 0.385); 
     }
+
+    
 }
 
 
