--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ section > div::-webkit-scrollbar{
 .slider {
     position: relative;
     width: 100%;
-    max-width: 1200px;
     height: 100%;
     margin: 30px auto;
     overflow: hidden;
@@ -284,11 +283,11 @@ section > div::-webkit-scrollbar{
     display: block;
     z-index: 1;
     border-radius: 10px 10px 0px 0px;
-    width: 60%;
+    width: 600px;
   height: 600px;
   background-color: white;
   position: fixed;
-  top: 200%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.258), -5px 2px 10px rgba(0, 0, 0, 0.295);
@@ -305,6 +304,56 @@ section > div::-webkit-scrollbar{
     font-weight: 400;
     cursor: pointer;
 }
+
+.modal-content{
+    display: flex;
+}
+
+.modal-content > img{
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+}
+
+.modal-content > div > h2{
+    margin-bottom: 10px;
+}
+
+.size{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.size-options{
+    display: flex;
+    gap: 10px;
+}
+
+.size-options > button{
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    padding: 15px;
+    
+}   
+
+.modal > .modal-footer{
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.modal > .modal-footer > button{
+    background-color: #15046c;
+    padding: 15px 50px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+}
+    
+
 
 
 @media (max-width: 750px) {
@@ -325,6 +374,11 @@ section > div::-webkit-scrollbar{
 
     .slider {
         height: 220px;
+    }
+
+    .modal{
+        width: 100%;
+        border-radius: 0px;
     }
 
 
