--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ header, .menu, section > div, .items, .cart{
     display: flex;
 }
 
+button, a {
+    cursor: pointer;
+}
+
 header {
     gap: 50px;
     max-height: 60px;
@@ -41,6 +45,10 @@ header {
     width: 100%;
     background-color: white;
     z-index: 1;
+}
+
+header a{
+    color: black;
 }
 
 .menu{
@@ -66,6 +74,7 @@ header {
     background-position: bottom right;
     color: white;
     display: flex;
+    gap: 20px;
     justify-content: center;
     flex-direction: column;
     text-align: justify;
@@ -87,16 +96,16 @@ header {
     width: 200px;
 }
 
-.container > button{
-    color: #15046c;
-    width: 250px;
-    padding: 10px;
-    border-radius: 20px;
-    border: none;
-}
 
-.container > button > a{
-    margin: 0 auto;
+
+.container > a{
+    background-color: #15046c;
+    width: 200px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    color: white;
+    text-align: center
+
 }
 
 .container > h1{
@@ -105,8 +114,6 @@ header {
     font-style: italic;
     font-size: 80px;
 }
-
-
 
 
 .container * {
@@ -123,7 +130,7 @@ section > h2{
 
 section > div{
     gap: 30px;
-
+    cursor: pointer;
     overflow: scroll;
     margin-left: 20px;
 }
@@ -135,7 +142,6 @@ section > div::-webkit-scrollbar{
 .item{
     display: flex;
     justify-content: center;
-
     position: relative;
     padding: 10px;
 }
@@ -156,15 +162,6 @@ section > div::-webkit-scrollbar{
     border-radius: 20px;
     border: none; 
 }
-
-
-
-.item:hover button{
-  opacity: 1;
-    top: 75%;   
-}
-
-
 
 
 .cart{
@@ -271,13 +268,10 @@ section > div::-webkit-scrollbar{
     height: 12px;
     background-color: #ccc;
     border-radius: 50%;
-    cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-.manual-btn:hover {
-    background-color: #555;
-}
+
 
 .modal{
     display: block;
@@ -287,7 +281,7 @@ section > div::-webkit-scrollbar{
   height: 600px;
   background-color: white;
   position: fixed;
-  top: 50%;
+  top: 200%;
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 5px 0px 10px rgba(0, 0, 0, 0.258), -5px 2px 10px rgba(0, 0, 0, 0.295);
@@ -354,10 +348,23 @@ section > div::-webkit-scrollbar{
 }
     
 
+@media (min-width: 769px) and (min-width: 1024px) {
+    .item:hover button{
+        opacity: 1;
+          top: 75%;   
+      }
 
-
-@media (max-width: 750px) {
+      .manual-btn:hover {
+        background-color: #555;
+    }
     
+}
+
+@media (max-width: 768px) {
+    
+    header{
+        gap: 20px;
+    }
 
     .container > h1{
         font-size: 50px;
@@ -379,6 +386,16 @@ section > div::-webkit-scrollbar{
     .modal{
         width: 100%;
         border-radius: 0px;
+    }
+
+    .modal-content > img{
+        width: 50%;
+    }
+
+   .size-options{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-start;
     }
 
 
