--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header a{
 
 .container{
     height: 100vh;
-    background-image: url(../img/background-img\(1\).svg);
+    background-image: url(../img/imagem\ de\ fundo\ desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom right;
@@ -228,49 +228,51 @@ section > div::-webkit-scrollbar{
     font-weight: bold;
 }
 
-.slider {
+.slide{
     position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 30px auto;
-    overflow: hidden;
+   width: 90%;
+   margin: auto;
+   margin-bottom: 90px;
+}
+
+.slider{
+    margin: auto;
+    overflow-x: hidden;
+    width: 90%;
     border-radius: 10px;
+    scroll-behavior: smooth;
 }
 
-.slides {
+.content{
     display: flex;
-    transition: transform 0.5s ease-in-out;
-    width: 200%;
+    width: fit-content;
 }
 
-.slide {
+.content > img{
     width: 100%;
-    flex-shrink: 0;
-}
-
-.slide img {
-    width: 50%;
     height: 100%;
     object-fit: cover;
 }
 
-.manual-navigation {
+#previousSlide, #nextSlide{
     position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 10px;
-}
-
-.manual-btn {
-    width: 12px;
-    height: 12px;
-    background-color: #ccc;
+    border: none;
     border-radius: 50%;
-    transition: background-color 0.3s ease;
+    padding: 10px;
+    background-color: #15046c;
+    color: white;
+    display: flex;
+    top: 50%;
+    box-shadow: 5px 5px 10px #15046c3c;
 }
 
+#previousSlide{
+    left: 3%;
+}
+
+#nextSlide{
+    right: 3%;
+}
 
 
 .modal{
@@ -366,6 +368,13 @@ section > div::-webkit-scrollbar{
         gap: 20px;
     }
 
+    .container{
+       text-align: justify;
+       margin: 0 auto;
+        background-image: url(../img/imagem\ de\ fundo\ mobile\(360\ x\ 640\ px\).svg);
+       margin-bottom: 15px;
+    }
+
     .container > h1{
         font-size: 50px;
     }
@@ -375,12 +384,7 @@ section > div::-webkit-scrollbar{
     }
 
     .container > p{
-        width: 350px;
-    }
-
-
-    .slider {
-        height: 220px;
+        width: 80%;
     }
 
     .modal{
@@ -392,12 +396,21 @@ section > div::-webkit-scrollbar{
         width: 50%;
     }
 
-   .size-options{
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: flex-start;
+    .slider{
+        width: 100%;
+        margin-bottom: 45px;
+    }
+    .slide{
+        width: 100%;
     }
 
+    #previousSlide{
+        left: 0;
+    }
+    
+    #nextSlide{
+       right: 0; 
+    }
 
 }
 
