--- a/css/style.css
+++ b/css/style.css
@@ -113,14 +113,27 @@ header a {
 
 
 
-.container > a {
+.container > button {
     background-color: var(--color2);
-    width: 200px;
+    width: 150px;
+    display: flex;
     padding: 10px 20px;
     border-radius: 20px;
+    box-shadow: 1px 1px 11px -1px #000000;
+    border: none;
+    transition: all 0.2s;
+}
+
+.container > button:hover {
+    background-color: var(--color3);
+    box-shadow: 1px 1px 11px -1px #000000;
+}
+
+.container > button > a{
     color: #fff;
-    text-align: center;
-    box-shadow: 1px 1px 11px -1px #000000;;
+    margin: auto;
+    width: 100%;
+    height: 100%; 
 }
 
 .container>h1 {
@@ -330,6 +343,10 @@ section>div::-webkit-scrollbar {
     
 }
 
+.resume-cart input.invalid::placeholder{
+    color: red;
+}
+
 .resume-cart > h3{
     text-align: center;
 }
@@ -473,16 +490,56 @@ section>div::-webkit-scrollbar {
     top: 57%;
 }
 
+footer > section:nth-child(1){
+    padding-top: 30px;
+    border-top:  1px solid var(--color1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 50px;  
+}
 
-@media (min-width: 769px) and (min-width: 1024px) {
-    .item:hover button {
-        opacity: 1;
-        top: 75%;
-    }
+footer > section:nth-child(1) div > p{
+    font-size: 15px;
+    margin-top: 5px;
+    font-weight: 400;
+    color: gray;
+}
 
-    .manual-btn:hover {
-        background-color: #555;
-    }
+footer > section:nth-child(1) >  div {
+    display: block;
+   text-align: center;
+}
+
+
+footer > section:nth-child(2){
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 40px 0px;
+    padding-top: 100px;
+    flex-wrap: wrap;
+}
+
+footer > section:nth-child(2) > div {
+   display: flex;
+   flex-direction: column;
+   flex-basis: 300px;
+   text-align: center;
+   margin-bottom: 20px;
+}
+
+footer > section:nth-child(2) > div > h4{
+    font-size: 20px;
+    text-align: center;
+}
+
+footer > section:nth-child(2) div > p{
+    font-size: 15px;
+    margin-top: 5px;
+    font-weight: 400;
+    color: gray;
 }
 
 @media (max-width: 1200px) {
@@ -503,7 +560,23 @@ section>div::-webkit-scrollbar {
         margin: auto;
     }
 
+    
+
 }
+
+
+@media (min-width: 769px) and (min-width: 1024px) {
+    .item:hover button {
+        opacity: 1;
+        top: 75%;
+    }
+
+    .manual-btn:hover {
+        background-color: #555;
+    }
+}
+
+
 
 @media (max-width: 768px) {
 
